Fixed the template html to no longer use two tables. This fixes issue #1, as the th width is now used for the entire table.

--- a/src/GridSelector/widget/template/GridSelector.html
+++ b/src/GridSelector/widget/template/GridSelector.html
@@ -23,14 +23,9 @@
     <div class="${baseClass}-content" dojoAttachPoint="contentNode" focusIndex="2">
         <div class="${subClass}-content-wrapper" dojoAttachPoint="tableWrapper">
             <form>
-                <table class="table table-bordered ${subClass}-head-table" dojoAttachPoint="headTable">
-                    <colgroup dojoAttachPoint="headTableGroupNode"></colgroup>
+                <table class="table table-striped table-bordered ${subClass}-head-table" dojoAttachPoint="gridTable">
                     <thead class="${subClass}-head" dojoAttachPoint="gridHeadNode"></thead>
-                </table>
-                <table class="table table-striped table-bordered ${subClass}-body-table" dojoAttachPoint="gridTable">
-                    <colgroup dojoAttachPoint="bodyTableGroupNode"></colgroup>
                     <tbody class="${subClass}-body" dojoAttachPoint="gridBodyNode"></tbody>
-                    <!--<tfoot class="${subClass}-foot" dojoAttachPoint="gridFootNode"></tfoot>-->
                 </table>
             </form>
         </div>
